--- a/пераклады модаў/Europe1100/1.2.8.5/Belarusian.Europe1100/ModuleData/Languages/BYc/settlements.xml
+++ b/пераклады модаў/Europe1100/1.2.8.5/Belarusian.Europe1100/ModuleData/Languages/BYc/settlements.xml
@@ -495,21 +495,21 @@
 <string id="Settlements.Settlement.ECM.village_V2_2" text="Дакс" />
 <string id="ECM_Settlements.Settlement.text.village_V2_2" text="Арытан месьціцца ля кароткай ракі, якая выцякае з гораў паўвыспы Эбор і ўпадае ў Акспул. Рака запавольваецца пры павароце, што дазваляе зьбіраць ганчарную гліну на берагах." />
 <string id="Settlements.Settlement.ECM.village_V2_3" text="Ажэн" />
-<string id="ECM_Settlements.Settlement.text.village_V2_3" text="Фрыджыян узвышаецца над раўнінаю на поўначы ад Прэйвенда, дзе цяпло Вландыйскага поўдня пачынае саступаць месца халаду поўначы. Вяскоўцы садзяць тут лён сярод багнаў і пашаў." />
+<string id="ECM_Settlements.Settlement.text.village_V2_3" text="Фрыджыян узвышаецца над раўнінаю на поўначы ад Правенда, дзе цяпло Вландыйскага поўдня пачынае саступаць месца халаду поўначы. Вяскоўцы садзяць тут лён сярод багнаў і пашаў." />
 <string id="Settlements.Settlement.ECM.castle_village_V8_2" text="Валонь" />
 <string id="ECM_Settlements.Settlement.text.village_V2_4" text="Марын ляжыць на заходніх схілах Акспула. Імглістыя раніцы, якая астуджаюцца марскімі струменямі, што нясуцца з поўдня. Цёплыя поўдні робяць гэтую зямлю добра прыдатнай для вырошчваньня вінаграду." />
 <string id="Settlements.Settlement.ECM.town_V3" text="Мэц" />
-<string id="ECM_Nx0qK2g6" text="Паравінаўс быў другой буйнай калоніяй, заснаванай Кальрадыёсам Вялікім, і неўзабаве ён зьмяніў Чарас ў якасьці сталіцы кальрадыйцаў. З часам цэнтр цяжару Імперыі перасунуўся на ўсход, але Паравінаўс захаваў сваю першасьць у якасьці эканамічнага цэнтру захаду. Калі Асрык Жалезная Рука уварваўся ў Вландыю, ён зразумеў, што Паравінаўс значна каштоўней у якасьці месца дужасьці, чым проста як крыніца здабычы, і дамовіўся пра яго здачу з мясцовымі сенатарамі. Ён перайшоў да кадэцкай галіны лініі Асрыка, клану дэй Цыгр, і сёньня вядомы як Прэйвенд." />
+<string id="ECM_Nx0qK2g6" text="Паравінаўс быў другой буйнай калоніяй, заснаванай Кальрадыёсам Вялікім, і неўзабаве ён зьмяніў Чарас ў якасьці сталіцы кальрадыйцаў. З часам цэнтр цяжару Імперыі перасунуўся на ўсход, але Паравінаўс захаваў сваю першасьць у якасьці эканамічнага цэнтру захаду. Калі Озрык Жалезная Рука уварваўся ў Вландыю, ён зразумеў, што Паравінаўс значна каштоўней у якасьці месца дужасьці, чым проста як крыніца здабычы, і дамовіўся пра яго здачу з мясцовымі сенатарамі. Ён перайшоў да кадэцкай галіны лініі Озрыка, клану дэй Цыгр, і сёньня вядомы як Правенд." />
 <string id="Settlements.Settlement.ECM.castle_village_V3_2" text="Нювэр" />
 <string id="ECM_Settlements.Settlement.text.village_V3_1" text="Валанбі мае від на вусьце ракі Транд. Жыхары вёскі садзяць лён на зямлі, адваяванай ува ўзьбярэжных багнаў." />
 <string id="Settlements.Settlement.ECM.village_V3_2" text="Вердан" />
 <string id="ECM_Settlements.Settlement.text.village_V3_2" text="Руланд ляжыць у лясістых сярэдніх далінах Транда. Жыхары вёскі сьпецыялізуюцца на разьвядзеньні сьвіньняў, якія сілкуюцца жалудамі з дубовых лясоў." />
 <string id="Settlements.Settlement.ECM.village_V3_3" text="Брусэль" />
-<string id="ECM_Settlements.Settlement.text.village_V3_3" text="Ларнак знаходзіцца на спадзістых узгорках у ніжняй частцы даліны Транд. Вяскоўцы садзяць жыта, ячмень і пшаніцу для продажу галоднаму гарадзкому насельніцтву суседняга Прэйвенда." />
+<string id="ECM_Settlements.Settlement.text.village_V3_3" text="Ларнак знаходзіцца на спадзістых узгорках у ніжняй частцы даліны Транд. Вяскоўцы садзяць жыта, ячмень і пшаніцу для продажу галоднаму гарадзкому насельніцтву суседняга Правенда." />
 <string id="Settlements.Settlement.ECM.village_V3_4" text="Бар" />
 <string id="ECM_Settlements.Settlement.text.village_V3_4" text="Палісант разьмешчаны ўва ўтоцы скалістай лагчыны, якая падзяляе травяністыя нізіны на поўначы ад ракі Транд. Глеба ў гэтых месцах тонкая, але вёсцы зручна разводзіць сьвіньняў і іншую жывёлу." />
 <string id="Settlements.Settlement.ECM.town_V5" text="Нант" />
-<string id="ECM_79R6gi4l" text="З Нанта адкрываецца від на разьбітае хвалямі Бісканскае ўзьбярэжжа. Ён прымае ўлоў ад адважных рыбакоў Біскана, якія аднаджваюцца выходзіць далёка ў заходні акіян, ды поўсьць авечак з пакрытых зялёнымі туманамі узгоркаў. Цяперашняя лінія гаспадароў Вландыі паходзіць ад кланаў, якія атабарыліся ў гэтым рэгіёне падчас уварваньня Асрыка Жалезнай Рукі." />
+<string id="ECM_79R6gi4l" text="З Нанта адкрываецца від на разьбітае хвалямі Бісканскае ўзьбярэжжа. Ён прымае ўлоў ад адважных рыбакоў Біскана, якія аднаджваюцца выходзіць далёка ў заходні акіян, ды поўсьць авечак з пакрытых зялёнымі туманамі узгоркаў. Цяперашняя лінія гаспадароў Вландыі паходзіць ад кланаў, якія атабарыліся ў гэтым рэгіёне падчас уварваньня Озрыка Жалезнай Рукі." />
 <string id="Settlements.Settlement.ECM.village_V5_1" text="Лю Ман" />
 <string id="ECM_Settlements.Settlement.text.village_V5_1" text="Форбэк разьмешчаны на шэльфе з відам на скалістае Бісканскае ўзьбярэжжа цэнтральнай Вландыі. Клімат тут цёплы большую частку года. Вінаград добра расьце на схілах Бісканскіх узгоркаў." />
 <string id="Settlements.Settlement.ECM.village_V5_2" text="Прыфай" />
@@ -649,7 +649,7 @@
 <string id="Settlements.Settlement.ECM.castle_K3" text="Замак Бэндзін" />
 <string id="Settlements.Settlement.ECM.castle_village_K3_1" text="Бельська" />
 <string id="ECM_Settlements.Settlement.text.castle_village_K3_1" text="Вёска Хаккун зьмесцавана на вяршыні ўступа ўзгоркаў Аккан. Жыхары гэтых месцаў здаўна здабывалі срэбра ў горах. Здабыча, якую з задавальненьнем заахвочвалі Хузаіцкія ханы, заваяваўшы гэты край." />
-<string id="Settlements.Settlement.ECM.castle_K4" text="Замак Кёнігсберг" />
+<string id="Settlements.Settlement.ECM.castle_K4" text="Замак Рэтоў" />
 <string id="Settlements.Settlement.ECM.castle_K5" text="Крэпасьць Дэзна" />
 <string id="Settlements.Settlement.ECM.castle_village_K5_1" text="Тэмэсіэнсіс" />
 <string id="ECM_Settlements.Settlement.text.castle_village_K5_1" text="Хімлі зьмесцаваны ў катлавіне плато Дэўсаг. Хаця гэтая зямля засушлівая найбольшую частку года, яна мае зімовыя сьнегапады і каламутныя крыніцы. Добрую гліну льга сабраць з лужаў, што застаюцца пасьля тапленьня сьнегу і дажджоў." />
@@ -675,7 +675,7 @@
 <string id="ECM_Settlements.Settlement.text.village_K1_1" text="Фіснар ляжыць ўздоўж ракі Захан, прытоку ракі Караказ. Хаця большую частку года ў гэтай даліне ляжыць сьнег, вясновыя травы пашы, тым ня менш, дазваляюць утрымоўваць вялікія статкі авечак, якіх бароніць густая поўсьць ад ледзяных вятроў." />
 <string id="Settlements.Settlement.ECM.village_K1_2" text="Рума" />
 <string id="ECM_Settlements.Settlement.text.village_K1_2" text="Улаан узвышаецца ў даліне ракі Караказ. Жыхары вёскі, качэўнікі, якіх ханы нядаўна прымусілі асесьці, навучыліся вырошчваць лён на гэтай нізіннай багністай зямлі." />
-<string id="Settlements.Settlement.ECM.castle_village_K4_2" text="Інстэрбург" />
+<string id="Settlements.Settlement.ECM.castle_village_K4_2" text="Катоў" />
 <string id="ECM_Settlements.Settlement.text.village_K1_3" text="Курулак разьмешчаны ўздоўж ракі Захан, прытоку ракі Караказ. Хаця большую частку года гэтая даліна занесеная сьнегам, стэпавыя поні тлусьцеюць на вясновых травах, а ўзімку капаюцца ў сьнезе ў пошуках ежы, густая поўсьць бароніць іх ад ледзяных павеваў ветру." />
 <string id="Settlements.Settlement.ECM.village_K1_4" text="Дзіэрна" />
 <string id="ECM_Settlements.Settlement.text.village_K1_4" text="Эсаліг стаіць у падножжа Барс-Дага, адной з вяршынь, што акрэсьліваюць край плато Дэўсаг. Жыхары вёскі разводзяць коней на ніжніх схілах, сочаць за сьнежнымі барсамі, у гонар якіх названа вяршыня." />
@@ -701,7 +701,7 @@
 <string id="ECM_Dxnj5JQE" text="Варшава зьмесцавана ў засушлівым цэнтры плато Дэўсаг, якое найбольшую частку года сухое, але ўвесну прапаноўвае багатыя пашы. Мястэчка заснавана даршімоўнымі гандлярамі, яно назапасіла сваё багацьце, набываючы коней, авечак і жывёлу ў навакольных пастухоўскіх вёсках і адпраўляючы тавары на захад, на кірмашы Імперыі, у велізарных абозах, у суправодзе вартаўнікоў, каб адпуджваць стэпавых налётнікаў. Аднак ні яго сьцены, ні наёмныя войскі ня вытрымалі прыходу Хана Урхуна. Горад быў падораны клану Хергітаў у знак прызнаньня іхняй адвагі." />
 <string id="Settlements.Settlement.ECM.castle_village_K5_2" text="Уйвідэк" />
 <string id="ECM_Settlements.Settlement.text.village_K4_1" text="Амраток стаіць ў падножжа гораў Салун Даг, якія з'яўляюцца ўсходняй мяжой плато Дэўсаг. Вяскоўцы ходзяць у блізкія лясы, каб нарыхтаваць адну з нямногіх крыніцаў драўніны ў Дэўсагу." />
-<string id="Settlements.Settlement.ECM.village_K4_2" text="Беласток" />
+<string id="Settlements.Settlement.ECM.village_K4_2" text="Ломжа" />
 <string id="ECM_Settlements.Settlement.text.village_K4_2" text="Рансам ляжыць на паўднёва-ўсходніх раўнінах плато Дэўсаг. Жыхары вёскі, якія не так даўно яшчэ вялі качавы лад жыцьця, сьпецыялізуюцца на разьвядзеньні коней." />
 <string id="Settlements.Settlement.ECM.village_K4_3" text="Бярэсьце" />
 <string id="ECM_Settlements.Settlement.text.village_K4_3" text="Міванджан знаходзіцца ў падножжа гораў Салун Даг, якія з'яўляюцца ўсходняй мяжой плато Дэўсаг. Жыхары вёскі, якія нядаўна вялі качавы лад жыцьця, разводзяць авечак у перадгор'ях." />
@@ -1232,19 +1232,19 @@
 <string id="Settlements.Settlement.ECM.KR.castle_KR1" text="Замак Камянец-Падольскі" />
 <string id="Settlements.Settlement.ECM.KR.castle_village_KR1_1" text="Чарткіў" />
 <string id="ECM_Settlements.Settlement.text.castle_village_KR1_1" text="Чарткіў." />
-<string id="Settlements.Settlement.ECM.KR.castle_KR2" text="Замак Менск" />
-<string id="Settlements.Settlement.ECM.KR.castle_village_KR2_1" text="Кавалёва Лаза" />
-<string id="ECM_Settlements.Settlement.text.castle_village_KR2_1" text="Кавалёва Лаза." />
+<string id="Settlements.Settlement.ECM.KR.castle_KR2" text="Замак Меньск" />
+<string id="Settlements.Settlement.ECM.KR.castle_village_KR2_1" text="Случеск" />
+<string id="ECM_Settlements.Settlement.text.castle_village_KR2_1" text="Случеск." />
 <string id="Settlements.Settlement.ECM.KR.castle_KR3" text="Замак Таржок" />
 <string id="Settlements.Settlement.ECM.KR.castle_village_KR3_1" text="Ціхвін" />
 <string id="ECM_Settlements.Settlement.text.castle_village_KR3_1" text="Ціхвін." />
 <string id="Settlements.Settlement.ECM.KR.castle_village_KR3_2" text="Цьвер" />
 <string id="ECM_Settlements.Settlement.text.castle_village_KR3_2" text="Цьвер." />
-<string id="Settlements.Settlement.ECM.KR.castle_KR4" text="Замак Вільня" />
-<string id="Settlements.Settlement.ECM.KR.castle_village_KR4_1" text="Даўгаўпілс" />
+<string id="Settlements.Settlement.ECM.KR.castle_KR4" text="Замак Ковно" />
+<string id="Settlements.Settlement.ECM.KR.castle_village_KR4_1" text="Пазямене" />
 <string id="ECM_Settlements.Settlement.text.castle_village_KR4_1" text="Кранірог зьмесцаваны на шырокай лясістай даліне, што выходзіць да ракі Гальха. Жыхары гэтых месцаў - дасьведчаныя лоўчыя, якія палююць на куніцу, лісу і труса дзеля багатых скурак, якія карыстаюцца вялікім попытам на поўдні." />
-<string id="Settlements.Settlement.ECM.KR.castle_village_KR4_2" text="Панявежыс" />
-<string id="ECM_Settlements.Settlement.text.castle_village_KR4_2" text="Панявежыс." />
+<string id="Settlements.Settlement.ECM.KR.castle_village_KR4_2" text="Волька" />
+<string id="ECM_Settlements.Settlement.text.castle_village_KR4_2" text="Волька." />
 <string id="Settlements.Settlement.ECM.KR.castle_KR5" text="Замак Пскоў" />
 <string id="Settlements.Settlement.ECM.KR.castle_village_KR5_1" text="Порхаў" />
 <string id="ECM_Settlements.Settlement.text.castle_village_KR5_1" text="Порхаў." />
@@ -1266,32 +1266,32 @@
 <string id="ECM_Settlements.Settlement.text.village_KR1_2" text="Мазыр." />
 <string id="Settlements.Settlement.ECM.KR.village_KR1_3" text="Чарнобыль" />
 <string id="ECM_Settlements.Settlement.text.village_KR1_3" text="Чарнобыль." />
-<string id="Settlements.Settlement.ECM.KR.town_KR2" text="Уладзімір-Валынскі" />
+<string id="Settlements.Settlement.ECM.KR.town_KR2" text="Берасьце" />
 <string id="ECM_KR_Xom9DeXZ" text="Уладзімір, які раскінуўся на ледзяных водах затокі Мазапар, быў заснаваны перасяленцамі з Нордлэнда. Легенда апавядае, што першая хваля нордаў напышліва запатрабавала даніну ад суседніх плямёнаў Ваккен і Стургія, якія склалі хаўрус і загналі новапрыбылых назад на свае караблі. Але пераможцы пачалі сварыцца з-за здабычы, пакуль ня высадзіўся хітры норд Гандар і не выклікаўся дапамагчы ім справядліва падзяліць зброю і браню сваіх загінулых суродзічаў. Людзі прызналі ўладу Гандар над краем, і яго нашчадкі, зьмяшаўшыся са Стургійцамі, сёньня з'яўляюцца вялікімі князямі Стургіі." />
-<string id="Settlements.Settlement.ECM.KR.village_KR2_1" text="Віжамля" />
-<string id="ECM_Settlements.Settlement.text.village_KR2_1" text="Віжамля." />
-<string id="Settlements.Settlement.ECM.KR.village_KR2_2" text="Красныстаў" />
-<string id="ECM_Settlements.Settlement.text.village_KR2_2" text="Красныстаў." />
+<string id="Settlements.Settlement.ECM.KR.village_KR2_1" text="Гайнаўка" />
+<string id="ECM_Settlements.Settlement.text.village_KR2_1" text="Гайнаўка." />
+<string id="Settlements.Settlement.ECM.KR.village_KR2_2" text="Вішніцы" />
+<string id="ECM_Settlements.Settlement.text.village_KR2_2" text="Вішніцы." />
 <string id="Settlements.Settlement.ECM.KR.castle_village_KR6_2" text="Фелін" />
 <string id="ECM_Settlements.Settlement.text.village_KR2_3" text="Фелін." />
-<string id="Settlements.Settlement.ECM.KR.town_KR3" text="Галіч" />
+<string id="Settlements.Settlement.ECM.KR.town_KR3" text="Галыч" />
 <string id="ECM_KR_pbHXtJ82" text="Галіч ляжыць на ўсходнім беразе возера Лаканіс. Задоўга да таго, як Стургійцы аб'ядналіся ў княствы, ён быў сьвятым месцам для лясных плямёнаў, якія ўшаноўвалі сваіх багоў і продкаў у сьвятых дубах блізкіх лясоў. Сёньня гэтае мястэчка з'яўляецца прыстанкам для лаўцоў пушніны і лесарубаў, якія гойсаюць па дзікіх землях Іркара на ўсходзе і заглушаюць першародны мір лясоў гукамі таргоў, пілаў і разгрузкі караблёў на возеры." />
-<string id="Settlements.Settlement.ECM.KR.village_KR3_1" text="Львоў" />
-<string id="ECM_Settlements.Settlement.text.village_KR3_1" text="Львоў." />
-<string id="Settlements.Settlement.ECM.KR.village_KR3_2" text="Тэрэбоўля" />
-<string id="ECM_Settlements.Settlement.text.village_KR3_2" text="Тэрэбоўля." />
+<string id="Settlements.Settlement.ECM.KR.village_KR3_1" text="Заріччя" />
+<string id="ECM_Settlements.Settlement.text.village_KR3_1" text="Заріччя." />
+<string id="Settlements.Settlement.ECM.KR.village_KR3_2" text="Оленівка" />
+<string id="ECM_Settlements.Settlement.text.village_KR3_2" text="Оленівка." />
 <string id="Settlements.Settlement.ECM.KR.town_KR4" text="Рыга" />
 <string id="ECM_KR_aTMypBiY" text="Рыга, зьмесцаваны пад гарамі Чэртыг на крыштальных водах возера Лаканіс, мае сумнеўны гонар, напэўна, самага захопліваемага горада Кальрадыі. Спачатку ён быў калоніяй Імперыі, сумна вядомага месца ссылкі сенатараў-дысідэнтаў, а потым быў захоплены нордамі ў якасьці базы для пашырэньня свайго ўплыву на гандаль мяхамі ў Стургіі. Ён быў захоплены племем Алькіт з усходніх стэпаў і нядоўга служыў сталіцай невялікага ханства, а потым канчаткова перайшоў да лютага клана Армідовінгаў." />
 <string id="Settlements.Settlement.ECM.KR.village_KR4_1" text="Шаўляй" />
 <string id="ECM_Settlements.Settlement.text.village_KR4_1" text="Шаўляй." />
 <string id="Settlements.Settlement.ECM.KR.castle_village_KR8_2" text="Растоў Вялікі" />
 <string id="ECM_Settlements.Settlement.text.village_KR4_2" text="Растоў Вялікі." />
-<string id="Settlements.Settlement.ECM.KR.village_KR4_3" text="Рэзэкнэ" />
-<string id="ECM_Settlements.Settlement.text.village_KR4_3" text="Рэзэкнэ." />
-<string id="Settlements.Settlement.ECM.KR.village_KR4_4" text="Мітава" />
-<string id="ECM_Settlements.Settlement.text.village_KR4_4" text="Мітава." />
-<string id="Settlements.Settlement.ECM.KR.town_KR5" text="Полацак" />
-<string id="ECM_KR_F5HlQdgf" text="Полацак зьмесцаваны на заходніх перадгор'ях гары Ільтан, на ўсходніх межах Стургійскіх земляў. Гэты рэгіён доўгі час заставаўся ўбаку ад змаганьня за ўладу паміж іншымі Стургійскімі княствамі. Яго жыхары вядомыя як вандроўнікі, гандляры, конегадоўцы і паляўнічыя за пушнінай. Мясцовая шляхта часам бярэ шлюбы са стэпавымі плямёнамі на ўсходзе, каб скласьці перамір'е альбо гандлёвую дамову, і з гонарам уключае імёны некалькіх вялікіх ханаў у сьпіс сваіх продкаў." />
+<string id="Settlements.Settlement.ECM.KR.village_KR4_3" text="Рубэні" />
+<string id="ECM_Settlements.Settlement.text.village_KR4_3" text="Рубэні." />
+<string id="Settlements.Settlement.ECM.KR.village_KR4_4" text="Сета" />
+<string id="ECM_Settlements.Settlement.text.village_KR4_4" text="Сета." />
+<string id="Settlements.Settlement.ECM.KR.town_KR5" text="Полацк" />
+<string id="ECM_KR_F5HlQdgf" text="Полацк зьмесцаваны на заходніх перадгор'ях гары Ільтан, на ўсходніх межах Стургійскіх земляў. Гэты рэгіён доўгі час заставаўся ўбаку ад змаганьня за ўладу паміж іншымі Стургійскімі княствамі. Яго жыхары вядомыя як вандроўнікі, гандляры, конегадоўцы і паляўнічыя за пушнінай. Мясцовая шляхта часам бярэ шлюбы са стэпавымі плямёнамі на ўсходзе, каб скласьці перамір'е альбо гандлёвую дамову, і з гонарам уключае імёны некалькіх вялікіх ханаў у сьпіс сваіх продкаў." />
 <string id="Settlements.Settlement.ECM.KR.village_KR5_1" text="Глыбокае" />
 <string id="ECM_Settlements.Settlement.text.village_KR5_1" text="Глыбокае." />
 <string id="Settlements.Settlement.ECM.KR.village_KR5_2" text="Шуміліна" />
