--- a/пераклады модаў/Europe1100/1.2.8.5/Belarusian.Europe1100/ModuleData/Languages/BYl/settlements.xml
+++ b/пераклады модаў/Europe1100/1.2.8.5/Belarusian.Europe1100/ModuleData/Languages/BYl/settlements.xml
@@ -495,21 +495,21 @@
 <string id="Settlements.Settlement.ECM.village_V2_2" text="Daks" />
 <string id="ECM_Settlements.Settlement.text.village_V2_2" text="Arytan mieścicca la karotkaj raki, jakaja vyciakaje z horaŭ paŭvyspy Ebor i ŭpadaje ŭ Akspuł. Raka zapavolvajecca pry pavarocie, što dazvalaje źbirać hančarnuju hlinu na bierahach." />
 <string id="Settlements.Settlement.ECM.village_V2_3" text="Ažen" />
-<string id="ECM_Settlements.Settlement.text.village_V2_3" text="Frydžyjan uzvyšajecca nad raŭninaju na poŭnačy ad Prejvienda, dzie ciapło Vłandyjskaha poŭdnia pačynaje sastupać miesca chaładu poŭnačy. Viaskoŭcy sadziać tut lon siarod bahnaŭ i pašaŭ." />
+<string id="ECM_Settlements.Settlement.text.village_V2_3" text="Frydžyjan uzvyšajecca nad raŭninaju na poŭnačy ad Pravienda, dzie ciapło Vłandyjskaha poŭdnia pačynaje sastupać miesca chaładu poŭnačy. Viaskoŭcy sadziać tut lon siarod bahnaŭ i pašaŭ." />
 <string id="Settlements.Settlement.ECM.castle_village_V8_2" text="Vałoń" />
 <string id="ECM_Settlements.Settlement.text.village_V2_4" text="Maryn lažyć na zachodnich schiłach Akspuła. Imhlistyja ranicy, jakaja astudžajucca marskimi strumieniami, što niasucca z poŭdnia. Ciopłyja poŭdni robiać hetuju ziamlu dobra prydatnaj dla vyroščvańnia vinahradu." />
 <string id="Settlements.Settlement.ECM.town_V3" text="Mec" />
-<string id="ECM_Nx0qK2g6" text="Paravinaŭs byŭ druhoj bujnaj kałonijaj, zasnavanaj Kalradyjosam Vialikim, i nieŭzabavie jon źmianiŭ Čaras ŭ jakaści stalicy kalradyjcaŭ. Z časam centr ciažaru Impieryi pierasunuŭsia na ŭschod, ale Paravinaŭs zachavaŭ svaju pieršaść u jakaści ekanamičnaha centru zachadu. Kali Asryk Žaleznaja Ruka uvarvaŭsia ŭ Vłandyju, jon zrazumieŭ, što Paravinaŭs značna kaštoŭniej u jakaści miesca dužaści, čym prosta jak krynica zdabyčy, i damoviŭsia pra jaho zdaču z miascovymi sienatarami. Jon pierajšoŭ da kadeckaj haliny linii Asryka, kłanu dej Cyhr, i siońnia viadomy jak Prejviend." />
+<string id="ECM_Nx0qK2g6" text="Paravinaŭs byŭ druhoj bujnaj kałonijaj, zasnavanaj Kalradyjosam Vialikim, i nieŭzabavie jon źmianiŭ Čaras ŭ jakaści stalicy kalradyjcaŭ. Z časam centr ciažaru Impieryi pierasunuŭsia na ŭschod, ale Paravinaŭs zachavaŭ svaju pieršaść u jakaści ekanamičnaha centru zachadu. Kali Ozryk Žaleznaja Ruka uvarvaŭsia ŭ Vłandyju, jon zrazumieŭ, što Paravinaŭs značna kaštoŭniej u jakaści miesca dužaści, čym prosta jak krynica zdabyčy, i damoviŭsia pra jaho zdaču z miascovymi sienatarami. Jon pierajšoŭ da kadeckaj haliny linii Ozryka, kłanu dej Cyhr, i siońnia viadomy jak Praviend." />
 <string id="Settlements.Settlement.ECM.castle_village_V3_2" text="Niuver" />
 <string id="ECM_Settlements.Settlement.text.village_V3_1" text="Vałanbi maje vid na vuście raki Trand. Žychary vioski sadziać lon na ziamli, advajavanaj uva ŭźbiarežnych bahnaŭ." />
 <string id="Settlements.Settlement.ECM.village_V3_2" text="Vierdan" />
 <string id="ECM_Settlements.Settlement.text.village_V3_2" text="Rułand lažyć u lasistych siarednich dalinach Tranda. Žychary vioski śpiecyjalizujucca na raźviadzieńni śvińniaŭ, jakija siłkujucca žałudami z dubovych lasoŭ." />
 <string id="Settlements.Settlement.ECM.village_V3_3" text="Brusel" />
-<string id="ECM_Settlements.Settlement.text.village_V3_3" text="Łarnak znachodzicca na spadzistych uzhorkach u nižniaj častcy daliny Trand. Viaskoŭcy sadziać žyta, jačmień i pšanicu dla prodažu hałodnamu haradzkomu nasielnictvu susiedniaha Prejvienda." />
+<string id="ECM_Settlements.Settlement.text.village_V3_3" text="Łarnak znachodzicca na spadzistych uzhorkach u nižniaj častcy daliny Trand. Viaskoŭcy sadziać žyta, jačmień i pšanicu dla prodažu hałodnamu haradzkomu nasielnictvu susiedniaha Pravienda." />
 <string id="Settlements.Settlement.ECM.village_V3_4" text="Bar" />
 <string id="ECM_Settlements.Settlement.text.village_V3_4" text="Palisant raźmieščany ŭva ŭtocy skalistaj łahčyny, jakaja padzialaje travianistyja niziny na poŭnačy ad raki Trand. Hleba ŭ hetych miescach tonkaja, ale vioscy zručna razvodzić śvińniaŭ i inšuju žyviołu." />
 <string id="Settlements.Settlement.ECM.town_V5" text="Nant" />
-<string id="ECM_79R6gi4l" text="Z Nanta adkryvajecca vid na raźbitaje chvalami Biskanskaje ŭźbiarežža. Jon prymaje ŭłoŭ ad advažnych rybakoŭ Biskana, jakija adnadžvajucca vychodzić daloka ŭ zachodni akijan, dy poŭść aviečak z pakrytych zialonymi tumanami uzhorkaŭ. Ciapierašniaja linija haspadaroŭ Vłandyi pachodzić ad kłanaŭ, jakija atabarylisia ŭ hetym rehijonie padčas uvarvańnia Asryka Žaleznaj Ruki." />
+<string id="ECM_79R6gi4l" text="Z Nanta adkryvajecca vid na raźbitaje chvalami Biskanskaje ŭźbiarežža. Jon prymaje ŭłoŭ ad advažnych rybakoŭ Biskana, jakija adnadžvajucca vychodzić daloka ŭ zachodni akijan, dy poŭść aviečak z pakrytych zialonymi tumanami uzhorkaŭ. Ciapierašniaja linija haspadaroŭ Vłandyi pachodzić ad kłanaŭ, jakija atabarylisia ŭ hetym rehijonie padčas uvarvańnia Ozryka Žaleznaj Ruki." />
 <string id="Settlements.Settlement.ECM.village_V5_1" text="Lu Man" />
 <string id="ECM_Settlements.Settlement.text.village_V5_1" text="Forbek raźmieščany na šelfie z vidam na skalistaje Biskanskaje ŭźbiarežža centralnaj Vłandyi. Klimat tut ciopły bolšuju častku hoda. Vinahrad dobra raście na schiłach Biskanskich uzhorkaŭ." />
 <string id="Settlements.Settlement.ECM.village_V5_2" text="Pryfaj" />
@@ -649,7 +649,7 @@
 <string id="Settlements.Settlement.ECM.castle_K3" text="Zamak Bendzin" />
 <string id="Settlements.Settlement.ECM.castle_village_K3_1" text="Bielśka" />
 <string id="ECM_Settlements.Settlement.text.castle_village_K3_1" text="Vioska Chakkun źmiescavana na viaršyni ŭstupa ŭzhorkaŭ Akkan. Žychary hetych miescaŭ zdaŭna zdabyvali srebra ŭ horach. Zdabyča, jakuju z zadavalnieńniem zaachvočvali Chuzaickija chany, zavajavaŭšy hety kraj." />
-<string id="Settlements.Settlement.ECM.castle_K4" text="Zamak Kionihsbierh" />
+<string id="Settlements.Settlement.ECM.castle_K4" text="Zamak Retoŭ" />
 <string id="Settlements.Settlement.ECM.castle_K5" text="Krepaść Dezna" />
 <string id="Settlements.Settlement.ECM.castle_village_K5_1" text="Temesiensis" />
 <string id="ECM_Settlements.Settlement.text.castle_village_K5_1" text="Chimli źmiescavany ŭ katłavinie płato Deŭsah. Chacia hetaja ziamla zasušlivaja najbolšuju častku hoda, jana maje zimovyja śniehapady i kałamutnyja krynicy. Dobruju hlinu lha sabrać z łužaŭ, što zastajucca paśla tapleńnia śniehu i daždžoŭ." />
@@ -675,7 +675,7 @@
 <string id="ECM_Settlements.Settlement.text.village_K1_1" text="Fisnar lažyć ŭzdoŭž raki Zachan, prytoku raki Karakaz. Chacia bolšuju častku hoda ŭ hetaj dalinie lažyć śnieh, viasnovyja travy pašy, tym nia mienš, dazvalajuć utrymoŭvać vialikija statki aviečak, jakich baronić hustaja poŭść ad ledzianych viatroŭ." />
 <string id="Settlements.Settlement.ECM.village_K1_2" text="Ruma" />
 <string id="ECM_Settlements.Settlement.text.village_K1_2" text="Ułaan uzvyšajecca ŭ dalinie raki Karakaz. Žychary vioski, kačeŭniki, jakich chany niadaŭna prymusili asieści, navučylisia vyroščvać lon na hetaj nizinnaj bahnistaj ziamli." />
-<string id="Settlements.Settlement.ECM.castle_village_K4_2" text="Insterburh" />
+<string id="Settlements.Settlement.ECM.castle_village_K4_2" text="Katoŭ" />
 <string id="ECM_Settlements.Settlement.text.village_K1_3" text="Kurułak raźmieščany ŭzdoŭž raki Zachan, prytoku raki Karakaz. Chacia bolšuju častku hoda hetaja dalina zaniesienaja śnieham, stepavyja poni tłuściejuć na viasnovych travach, a ŭzimku kapajucca ŭ śniezie ŭ pošukach ježy, hustaja poŭść baronić ich ad ledzianych pavievaŭ vietru." />
 <string id="Settlements.Settlement.ECM.village_K1_4" text="Dzierna" />
 <string id="ECM_Settlements.Settlement.text.village_K1_4" text="Esalih staić u padnožža Bars-Daha, adnoj z viaršyń, što akreślivajuć kraj płato Deŭsah. Žychary vioski razvodziać koniej na nižnich schiłach, sočać za śniežnymi barsami, u honar jakich nazvana viaršynia." />
@@ -701,7 +701,7 @@
 <string id="ECM_Dxnj5JQE" text="Varšava źmiescavana ŭ zasušlivym centry płato Deŭsah, jakoje najbolšuju častku hoda suchoje, ale ŭviesnu prapanoŭvaje bahatyja pašy. Miastečka zasnavana daršimoŭnymi handlarami, jano nazapasiła svajo bahaćcie, nabyvajučy koniej, aviečak i žyviołu ŭ navakolnych pastuchoŭskich vioskach i adpraŭlajučy tavary na zachad, na kirmašy Impieryi, u vielizarnych abozach, u supravodzie vartaŭnikoŭ, kab adpudžvać stepavych nalotnikaŭ. Adnak ni jaho ścieny, ni najomnyja vojski nia vytrymali prychodu Chana Urchuna. Horad byŭ padorany kłanu Chierhitaŭ u znak pryznańnia ichniaj advahi." />
 <string id="Settlements.Settlement.ECM.castle_village_K5_2" text="Ujvidek" />
 <string id="ECM_Settlements.Settlement.text.village_K4_1" text="Amratok staić ŭ padnožža horaŭ Sałun Dah, jakija zjaŭlajucca ŭschodniaj miažoj płato Deŭsah. Viaskoŭcy chodziać u blizkija lasy, kab narychtavać adnu z niamnohich krynicaŭ draŭniny ŭ Deŭsahu." />
-<string id="Settlements.Settlement.ECM.village_K4_2" text="Biełastok" />
+<string id="Settlements.Settlement.ECM.village_K4_2" text="Łomža" />
 <string id="ECM_Settlements.Settlement.text.village_K4_2" text="Ransam lažyć na paŭdniova-ŭschodnich raŭninach płato Deŭsah. Žychary vioski, jakija nie tak daŭno jašče viali kačavy ład žyćcia, śpiecyjalizujucca na raźviadzieńni koniej." />
 <string id="Settlements.Settlement.ECM.village_K4_3" text="Biareście" />
 <string id="ECM_Settlements.Settlement.text.village_K4_3" text="Mivandžan znachodzicca ŭ padnožža horaŭ Sałun Dah, jakija zjaŭlajucca ŭschodniaj miažoj płato Deŭsah. Žychary vioski, jakija niadaŭna viali kačavy ład žyćcia, razvodziać aviečak u pieradhorjach." />
@@ -1232,19 +1232,19 @@
 <string id="Settlements.Settlement.ECM.KR.castle_KR1" text="Zamak Kamianiec-Padolski" />
 <string id="Settlements.Settlement.ECM.KR.castle_village_KR1_1" text="Čartkiŭ" />
 <string id="ECM_Settlements.Settlement.text.castle_village_KR1_1" text="Čartkiŭ." />
-<string id="Settlements.Settlement.ECM.KR.castle_KR2" text="Zamak Miensk" />
-<string id="Settlements.Settlement.ECM.KR.castle_village_KR2_1" text="Kavalova Łaza" />
-<string id="ECM_Settlements.Settlement.text.castle_village_KR2_1" text="Kavalova Łaza." />
+<string id="Settlements.Settlement.ECM.KR.castle_KR2" text="Zamak Mieńsk" />
+<string id="Settlements.Settlement.ECM.KR.castle_village_KR2_1" text="Słučiesk" />
+<string id="ECM_Settlements.Settlement.text.castle_village_KR2_1" text="Słučiesk." />
 <string id="Settlements.Settlement.ECM.KR.castle_KR3" text="Zamak Taržok" />
 <string id="Settlements.Settlement.ECM.KR.castle_village_KR3_1" text="Cichvin" />
 <string id="ECM_Settlements.Settlement.text.castle_village_KR3_1" text="Cichvin." />
 <string id="Settlements.Settlement.ECM.KR.castle_village_KR3_2" text="Ćvier" />
 <string id="ECM_Settlements.Settlement.text.castle_village_KR3_2" text="Ćvier." />
-<string id="Settlements.Settlement.ECM.KR.castle_KR4" text="Zamak Vilnia" />
-<string id="Settlements.Settlement.ECM.KR.castle_village_KR4_1" text="Daŭhaŭpiłs" />
+<string id="Settlements.Settlement.ECM.KR.castle_KR4" text="Zamak Kovno" />
+<string id="Settlements.Settlement.ECM.KR.castle_village_KR4_1" text="Paziamienie" />
 <string id="ECM_Settlements.Settlement.text.castle_village_KR4_1" text="Kraniroh źmiescavany na šyrokaj lasistaj dalinie, što vychodzić da raki Halcha. Žychary hetych miescaŭ - daśviedčanyja łoŭčyja, jakija palujuć na kunicu, lisu i trusa dziela bahatych skurak, jakija karystajucca vialikim popytam na poŭdni." />
-<string id="Settlements.Settlement.ECM.KR.castle_village_KR4_2" text="Paniaviežys" />
-<string id="ECM_Settlements.Settlement.text.castle_village_KR4_2" text="Paniaviežys." />
+<string id="Settlements.Settlement.ECM.KR.castle_village_KR4_2" text="Volka" />
+<string id="ECM_Settlements.Settlement.text.castle_village_KR4_2" text="Volka." />
 <string id="Settlements.Settlement.ECM.KR.castle_KR5" text="Zamak Pskoŭ" />
 <string id="Settlements.Settlement.ECM.KR.castle_village_KR5_1" text="Porchaŭ" />
 <string id="ECM_Settlements.Settlement.text.castle_village_KR5_1" text="Porchaŭ." />
@@ -1266,32 +1266,32 @@
 <string id="ECM_Settlements.Settlement.text.village_KR1_2" text="Mazyr." />
 <string id="Settlements.Settlement.ECM.KR.village_KR1_3" text="Čarnobyl" />
 <string id="ECM_Settlements.Settlement.text.village_KR1_3" text="Čarnobyl." />
-<string id="Settlements.Settlement.ECM.KR.town_KR2" text="Uładzimir-Vałynski" />
+<string id="Settlements.Settlement.ECM.KR.town_KR2" text="Bieraście" />
 <string id="ECM_KR_Xom9DeXZ" text="Uładzimir, jaki raskinuŭsia na ledzianych vodach zatoki Mazapar, byŭ zasnavany pierasialencami z Nordłenda. Lehienda apaviadaje, što pieršaja chvala nordaŭ napyšliva zapatrabavała daninu ad susiednich plamionaŭ Vakkien i Sturhija, jakija skłali chaŭrus i zahnali novaprybyłych nazad na svaje karabli. Ale pieramožcy pačali svarycca z-za zdabyčy, pakul nia vysadziŭsia chitry nord Handar i nie vyklikaŭsia dapamahčy im spraviadliva padzialić zbroju i braniu svaich zahinułych surodzičaŭ. Ludzi pryznali ŭładu Handar nad krajem, i jaho naščadki, źmiašaŭšysia sa Sturhijcami, siońnia zjaŭlajucca vialikimi kniaziami Sturhii." />
-<string id="Settlements.Settlement.ECM.KR.village_KR2_1" text="Vižamla" />
-<string id="ECM_Settlements.Settlement.text.village_KR2_1" text="Vižamla." />
-<string id="Settlements.Settlement.ECM.KR.village_KR2_2" text="Krasnystaŭ" />
-<string id="ECM_Settlements.Settlement.text.village_KR2_2" text="Krasnystaŭ." />
+<string id="Settlements.Settlement.ECM.KR.village_KR2_1" text="Hajnaŭka" />
+<string id="ECM_Settlements.Settlement.text.village_KR2_1" text="Hajnaŭka." />
+<string id="Settlements.Settlement.ECM.KR.village_KR2_2" text="Višnicy" />
+<string id="ECM_Settlements.Settlement.text.village_KR2_2" text="Višnicy." />
 <string id="Settlements.Settlement.ECM.KR.castle_village_KR6_2" text="Fielin" />
 <string id="ECM_Settlements.Settlement.text.village_KR2_3" text="Fielin." />
-<string id="Settlements.Settlement.ECM.KR.town_KR3" text="Halič" />
+<string id="Settlements.Settlement.ECM.KR.town_KR3" text="Hałyč" />
 <string id="ECM_KR_pbHXtJ82" text="Halič lažyć na ŭschodnim bierazie voziera Łakanis. Zadoŭha da taho, jak Sturhijcy abjadnalisia ŭ kniastvy, jon byŭ śviatym miescam dla lasnych plamionaŭ, jakija ŭšanoŭvali svaich bahoŭ i prodkaŭ u śviatych dubach blizkich lasoŭ. Siońnia hetaje miastečka zjaŭlajecca prystankam dla łaŭcoŭ pušniny i lesarubaŭ, jakija hojsajuć pa dzikich ziemlach Irkara na ŭschodzie i zahłušajuć pieršarodny mir lasoŭ hukami tarhoŭ, piłaŭ i razhruzki karabloŭ na voziery." />
-<string id="Settlements.Settlement.ECM.KR.village_KR3_1" text="Lvoŭ" />
-<string id="ECM_Settlements.Settlement.text.village_KR3_1" text="Lvoŭ." />
-<string id="Settlements.Settlement.ECM.KR.village_KR3_2" text="Tereboŭla" />
-<string id="ECM_Settlements.Settlement.text.village_KR3_2" text="Tereboŭla." />
+<string id="Settlements.Settlement.ECM.KR.village_KR3_1" text="Zariččia" />
+<string id="ECM_Settlements.Settlement.text.village_KR3_1" text="Zariččia." />
+<string id="Settlements.Settlement.ECM.KR.village_KR3_2" text="Olenivka" />
+<string id="ECM_Settlements.Settlement.text.village_KR3_2" text="Olenivka." />
 <string id="Settlements.Settlement.ECM.KR.town_KR4" text="Ryha" />
 <string id="ECM_KR_aTMypBiY" text="Ryha, źmiescavany pad harami Čertyh na kryštalnych vodach voziera Łakanis, maje sumnieŭny honar, napeŭna, samaha zachoplivajemaha horada Kalradyi. Spačatku jon byŭ kałonijaj Impieryi, sumna viadomaha miesca ssyłki sienataraŭ-dysidentaŭ, a potym byŭ zachopleny nordami ŭ jakaści bazy dla pašyreńnia svajho ŭpłyvu na handal miachami ŭ Sturhii. Jon byŭ zachopleny plemiem Alkit z uschodnich stepaŭ i niadoŭha słužyŭ stalicaj nievialikaha chanstva, a potym kančatkova pierajšoŭ da lutaha kłana Armidovinhaŭ." />
 <string id="Settlements.Settlement.ECM.KR.village_KR4_1" text="Šaŭlaj" />
 <string id="ECM_Settlements.Settlement.text.village_KR4_1" text="Šaŭlaj." />
 <string id="Settlements.Settlement.ECM.KR.castle_village_KR8_2" text="Rastoŭ Vialiki" />
 <string id="ECM_Settlements.Settlement.text.village_KR4_2" text="Rastoŭ Vialiki." />
-<string id="Settlements.Settlement.ECM.KR.village_KR4_3" text="Rezekne" />
-<string id="ECM_Settlements.Settlement.text.village_KR4_3" text="Rezekne." />
-<string id="Settlements.Settlement.ECM.KR.village_KR4_4" text="Mitava" />
-<string id="ECM_Settlements.Settlement.text.village_KR4_4" text="Mitava." />
-<string id="Settlements.Settlement.ECM.KR.town_KR5" text="Połacak" />
-<string id="ECM_KR_F5HlQdgf" text="Połacak źmiescavany na zachodnich pieradhorjach hary Iltan, na ŭschodnich miežach Sturhijskich ziemlaŭ. Hety rehijon doŭhi čas zastavaŭsia ŭbaku ad zmahańnia za ŭładu pamiž inšymi Sturhijskimi kniastvami. Jaho žychary viadomyja jak vandroŭniki, handlary, koniehadoŭcy i palaŭničyja za pušninaj. Miascovaja šlachta časam biare šluby sa stepavymi plamionami na ŭschodzie, kab skłaści pieramirje albo handlovuju damovu, i z honaram uklučaje imiony niekalkich vialikich chanaŭ u śpis svaich prodkaŭ." />
+<string id="Settlements.Settlement.ECM.KR.village_KR4_3" text="Rubeni" />
+<string id="ECM_Settlements.Settlement.text.village_KR4_3" text="Rubeni." />
+<string id="Settlements.Settlement.ECM.KR.village_KR4_4" text="Sieta" />
+<string id="ECM_Settlements.Settlement.text.village_KR4_4" text="Sieta." />
+<string id="Settlements.Settlement.ECM.KR.town_KR5" text="Połack" />
+<string id="ECM_KR_F5HlQdgf" text="Połack źmiescavany na zachodnich pieradhorjach hary Iltan, na ŭschodnich miežach Sturhijskich ziemlaŭ. Hety rehijon doŭhi čas zastavaŭsia ŭbaku ad zmahańnia za ŭładu pamiž inšymi Sturhijskimi kniastvami. Jaho žychary viadomyja jak vandroŭniki, handlary, koniehadoŭcy i palaŭničyja za pušninaj. Miascovaja šlachta časam biare šluby sa stepavymi plamionami na ŭschodzie, kab skłaści pieramirje albo handlovuju damovu, i z honaram uklučaje imiony niekalkich vialikich chanaŭ u śpis svaich prodkaŭ." />
 <string id="Settlements.Settlement.ECM.KR.village_KR5_1" text="Hłybokaje" />
 <string id="ECM_Settlements.Settlement.text.village_KR5_1" text="Hłybokaje." />
 <string id="Settlements.Settlement.ECM.KR.village_KR5_2" text="Šumilina" />
